--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "pinia": "^2.2.1",
     "vue": "^3.4.31"
   },
   "devDependencies": {
