--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "path": "^0.12.7",
     "vue": "^3.4.31"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@storybook/test": "^8.2.9",
     "@storybook/vue3": "^8.2.9",
     "@storybook/vue3-vite": "^8.2.9",
+    "@types/node": "^22.3.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
