--- a/vite-project/tsconfig.json
+++ b/vite-project/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "paths": {
+      "@": ["./src"],
+      "@components/*": ["./src/components/*"]
+    },
+  },
   "files": [],
   "references": [
     {
