--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -28,6 +28,7 @@
     "@storybook/vue3-vite": "^8.2.9",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.40",
     "storybook": "^8.2.9",
     "tailwindcss": "^3.4.7",
